[package]
name = "m3u8-rs"
version = "4.0.0"
authors = ["Rutger"]
readme = "README.md"
repository = "https://github.com/rutgersc/m3u8-rs"
description = "A library for parsing m3u8 files (Apple's HTTP Live Streaming (HLS) protocol)."
documentation = "https://rutgersc.github.io/doc/m3u8_rs/index.html"
license = "MIT"
edition = "2018"

[dependencies]
nom = { version = "7", optional = true }
chrono = { version = "0.4" }

[features]
default = ["parser"]
parser = ["nom"]

