[package]
name = "m3u8-rs"
version = "5.0.5"
authors = ["Rutger"]
readme = "README.md"
repository = "https://github.com/rutgersc/m3u8-rs"
description = "A library for parsing m3u8 files (Apple's HTTP Live Streaming (HLS) protocol)."
documentation = "https://rutgersc.github.io/doc/m3u8_rs/index.html"
license = "MIT"
edition = "2018"

[dependencies]
nom = { version = "7", optional = true }
chrono = { version = "0.4", default-features = false, features = [ "std" ] }

[features]
default = ["parser"]
parser = ["nom"]

